--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@popperjs/core": "^2.10.2",
+    "ethers": "^5.5.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
