--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@headlessui/react": "^1.4.2",
     "@popperjs/core": "^2.10.2",
     "ethers": "^5.5.2",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.35",
