--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
+    "@headlessui/react": "^1.5.0",
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
     "ethers": "^5.5.2",
-    "next": "^12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.0",
     "react-redux": "^7.2.6",
     "recoil": "^0.6.1",
     "swiper": "^7.4.1"
