--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.5.0",
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.0",
     "ethers": "^5.5.2",
     "next": "^12.1.0",
     "react": "17.0.2",
