--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@uniswap/token-lists": "^1.0.0-beta.28",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.13",
     "ajv": "^8.10.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.0",
+    "cd3d-dex-libs-sdk": "^2.0.1",
     "cids": "^1.1.9",
     "ethers": "^5.5.2",
     "jsbi": "^4.2.0",
