--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ethersproject/providers": "^5.6.1",
     "@headlessui/react": "^1.5.0",
     "@metamask/detect-provider": "^1.2.0",
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "2.9.1",
     "@reduxjs/toolkit": "^1.8.0",
     "@uniswap/token-lists": "^1.0.0-beta.28",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -24,7 +24,7 @@
     "ajv": "^6.12.5",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.0",
-    "cd3d-dex-libs-sdk": "^2.0.1",
+    "cd3d-dex-libs-sdk": "^1.0.0",
     "cids": "^1.1.9",
     "ethers": "^5.5.2",
     "jsbi": "^4.2.0",
