--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.27.0",
     "react-redux": "^7.2.6",
-    "recoil": "^0.6.1",
     "redux": "^4.1.2",
     "redux-localstorage-simple": "^2.4.1",
     "swiper": "^7.4.1",
